--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         <div class="message" id="message">
             <p><strong>Dla Juli Czarkowskiej</strong></p>
             <p>
+Zrobiłem co mogłem, żegnaj kochana
+                
 Spotkałem Cię,
 gdy nie szukałem miłości,
 a straciłem,
