--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Nie dziś i nie jutro</title>
+    <title>Do Ciebie</title>
     <style>
         body {
             background-color: #0d1117;
@@ -83,7 +83,8 @@ to odnajdą się znów.
 Nawet po drugiej stronie czasu.
 Nawet w innym wszechświecie.
 
-Na zawsze Twój A.K 
+Na zawsze Twój A.K
+                
 29.05.2025
 
 1 Kor 13,7–8 
