--- a/index.html
+++ b/index.html
@@ -92,37 +92,36 @@ Na zawsze Twój A.K
         </div>
     </div>
 <script>
-  const correctPasswords = [
-    "16082020",
-    "16.08.2020",
-    "16/08/2020",
-    "16-08-2020",
-    "16 sierpnia 2020",
-    "16 Sierpnia 2020",
-    "16 08 2020",
-    "2020-08-16",
-    "20200816",
-    "16.8.2020"
-  ];
+  function checkPassword() {
+    const password = document.getElementById("password").value.trim();
+    const correctPasswords = [
+      "16082020",
+      "16.08.2020",
+      "16/08/2020",
+      "16-08-2020",
+      "16 sierpnia 2020",
+      "16 Sierpnia 2020",
+      "16 08 2020",
+      "2020-08-16",
+      "20200816",
+      "16.8.2020"
+    ];
+
+    if (correctPasswords.includes(password)) {
+      document.getElementById("locked-content").style.display = "block";
+      document.getElementById("password-form").style.display = "none";
+    }
+  }
 
   document.addEventListener("DOMContentLoaded", function () {
-    document.getElementById("submit-button").addEventListener("click", function (event) {
-      event.preventDefault(); // ← ZATRZYMUJE PRZEŁADOWANIE STRONY
-
-      const password = document.getElementById("password").value.trim();
-      const message = document.getElementById("message");
-
-      if (correctPasswords.includes(password)) {
-        document.getElementById("locked-content").style.display = "block";
-        document.getElementById("password-form").style.display = "none";
-        message.style.display = "block";
-      } else {
-        alert("Niepoprawna data. Spróbuj dalej.");
-        message.style.display = "none";
-      }
-    });
+    document
+      .getElementById("submit-button")
+      .addEventListener("click", function () {
+        checkPassword();
+      });
   });
 </script>
+
 
 
 
