--- a/index.html
+++ b/index.html
@@ -96,18 +96,7 @@ Na zawsze Twój A.K
         function checkPassword() {
             const password = document.getElementById('password').value;
             const message = document.getElementById('message');
-                const correctPasswords = [
-      "16082020",
-      "16.08.2020",
-      "16/08/2020",
-      "16-08-2020",
-      "16 sierpnia 2020",
-      "16 Sierpnia 2020",
-      "16 08 2020",
-      "2020-08-16",
-      "20200816",
-      "16.8.2020"
-    ];
+            if (Password === [ '16082020',) {
                 message.style.display = 'block';
             } else {
                 message.style.display = 'none';
